# stringdiag

./: DataConstructor.hs  DataDefinition08.hs  DataParser.hs  ExpParser.hs  Main.hs  string-diagrams.cabal  string_diagrams.cabal~
static/: Examples  stack.yaml  stringD.cabal
static/css/: styles.css
static/scripts/: scripts.js
