name:                stringD
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/stringD#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable stringD-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       DataConstructor
                     , DataDefinition08
                     , DataParser
                     , ExpParser
  build-depends:       base
                     , stringD
                     , mtl
                     , text
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , bytestring
                     , blaze-html
                     , diagrams
                     , lucid-svg
                     , parsec
                     , parsec-extra
                     , diagrams-lib
                     , diagrams-svg
                     , monad-logger
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , stringD
  default-language:    Haskell2010

test-suite stringD-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       bas
                     , mtl
                     , text
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , bytestring
                     , blaze-html
                     , diagrams
                     , lucid-svg
                     , parsec
                     , diagrams-lib
                     , diagrams-svg
                     , monad-logger
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , stringD
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stringD
